--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
     <tr>
         <th>Title</th>
         <th>Text</th>
+        <th colspan=3">Action</th>
     </tr>
     <% @articles.each do |article| %>
         <tr>
@@ -11,6 +12,7 @@
             <td><%= article.text %></td>
             <td><%= link_to 'Show', article_path(article) %></td>
             <td><%= link_to 'Edit', edit_article_path(article) %></td>
+            <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure?'} %></td>
         </tr>
     <% end %>
 </table>
