--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,3 +6,6 @@
     <strong>Body: </strong>
     <%= comment.body %>
 </p>
+<p>
+    <%= link_to 'Delete Comment', [comment.article, comment], method: :delete, data: {confirm: 'Are you sure?'} %>
+</p>
